--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,150 +7,126 @@
     android:background="#F6F6F6"
     tools:context=".MainActivity">
 
-
     <Button
         android:id="@+id/button"
-        android:layout_width="257dp"
-<<<<<<< HEAD
-        android:layout_height="45dp"
-        android:text="Add new card"
-=======
+        android:layout_width="327dp"
         android:layout_height="48dp"
-        android:text="Add new card"
+        android:text="Add New Card"
         tools:ignore="MissingConstraints"
->>>>>>> ca30383 (Разметка для карточки)
-        tools:layout_editor_absoluteX="97dp"
-        tools:layout_editor_absoluteY="673dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="387dp"
-        android:layout_height="40dp"
-        android:background="#FFFFFF"
-        android:text="Your Card Number"
-        android:textAlignment="gravity"
-        tools:layout_editor_absoluteX="34dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="404dp" />
-=======
-        tools:layout_editor_absoluteY="404dp"
-        tools:ignore="MissingConstraints" />
->>>>>>> ca30383 (Разметка для карточки)
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name on card"
-        tools:layout_editor_absoluteX="42dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="282dp" />
-=======
-        tools:layout_editor_absoluteY="282dp"
-        tools:ignore="MissingConstraints" />
->>>>>>> ca30383 (Разметка для карточки)
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Card number"
-        tools:layout_editor_absoluteX="42dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="366dp" />
-=======
-        tools:layout_editor_absoluteY="366dp"
-        tools:ignore="MissingConstraints" />
->>>>>>> ca30383 (Разметка для карточки)
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="387dp"
-        android:layout_height="40dp"
-        android:background="#FFFFFF"
-        android:text="Your Name"
-        android:textAlignment="gravity"
-        tools:layout_editor_absoluteX="32dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="311dp" />
-=======
-        tools:layout_editor_absoluteY="311dp"
-        tools:ignore="MissingConstraints" />
->>>>>>> ca30383 (Разметка для карточки)
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exp Date"
-        tools:layout_editor_absoluteX="42dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="461dp" />
-=======
-        tools:layout_editor_absoluteY="461dp"
-        tools:ignore="MissingConstraints" />
->>>>>>> ca30383 (Разметка для карточки)
+        tools:layout_editor_absoluteX="62dp"
+        tools:layout_editor_absoluteY="659dp" />
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="389dp"
-        android:layout_height="38dp"
-        tools:layout_editor_absoluteX="32dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="496dp">
-=======
-        tools:layout_editor_absoluteY="496dp"
+        android:layout_width="396dp"
+        android:layout_height="75dp"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="441dp"
         tools:ignore="MissingConstraints">
->>>>>>> ca30383 (Разметка для карточки)
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="179dp"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF"
-            android:text="Your Exp Card Date"
-            android:textAlignment="center"
+            android:layout_width="176dp"
+            android:layout_height="38dp"
+            android:text="Exp Date"
             app:layout_column="0"
             app:layout_row="0" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="165dp"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF"
-            android:text="Your Card SWW"
-            android:textAlignment="center"
+            android:layout_width="142dp"
+            android:layout_height="38dp"
+            android:text="CVV"
             app:layout_column="2"
             app:layout_row="0" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="162dp"
+            android:layout_height="wrap_content"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="174dp"
+            android:layout_height="30dp"
+            android:background="@drawable/rounded_corner1"
+            android:text="Your Exp Card Date"
+            app:layout_column="0"
+            app:layout_row="3" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="189dp"
+            android:layout_height="30dp"
+            android:background="@drawable/rounded_corner1"
+            android:text="Your Card CVV"
+            app:layout_column="2"
+            app:layout_row="3" />
+    </androidx.gridlayout.widget.GridLayout>
+
+    <androidx.gridlayout.widget.GridLayout
+        android:layout_width="404dp"
+        android:layout_height="146dp"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="283dp"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="267dp"
+            android:layout_height="39dp"
+            android:text="Name on card"
+            app:layout_column="0"
+            app:layout_row="0" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="401dp"
+            android:layout_height="36dp"
+            android:background="@drawable/rounded_corner1"
+            android:text="       Your Card Nimber"
+            app:layout_column="0"
+            app:layout_row="3" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="269dp"
+            android:layout_height="36dp"
+            android:text="Card Number"
+            android:textAlignment="textStart"
+            app:layout_column="0"
+            app:layout_row="2" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:background="@drawable/rounded_corner1"
+            android:text="       Your Name"
+            app:layout_column="0"
+            app:layout_row="1" />
     </androidx.gridlayout.widget.GridLayout>
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="335dp"
-        android:layout_height="152dp"
+        android:id="@+id/textView21"
+        android:layout_width="399dp"
+        android:layout_height="168dp"
         android:background="@drawable/rounded_corner"
         android:text="TextView"
-        tools:layout_editor_absoluteX="58dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="80dp" />
-=======
-        tools:layout_editor_absoluteY="80dp"
+        tools:layout_editor_absoluteX="21dp"
+        tools:layout_editor_absoluteY="64dp"
         tools:ignore="MissingConstraints" />
->>>>>>> ca30383 (Разметка для карточки)
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="273dp"
-        android:layout_height="59dp"
-        tools:layout_editor_absoluteX="81dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="165dp">
-=======
+        android:layout_width="343dp"
+        android:layout_height="57dp"
+        tools:layout_editor_absoluteX="55dp"
         tools:layout_editor_absoluteY="165dp"
         tools:ignore="MissingConstraints">
->>>>>>> ca30383 (Разметка для карточки)
 
         <TextView
-            android:id="@+id/textView16"
-            android:layout_width="109dp"
+            android:id="@+id/textView26"
+            android:layout_width="131dp"
             android:layout_height="wrap_content"
             android:text="Your Balance"
             android:textColor="#FFFFFF"
@@ -158,42 +134,37 @@
             app:layout_row="0" />
 
         <TextView
-            android:id="@+id/textView18"
-            android:layout_width="109dp"
-            android:layout_height="29dp"
-            android:text="$ 0"
-            android:textAllCaps="false"
+            android:id="@+id/textView28"
+            android:layout_width="93dp"
+            android:layout_height="wrap_content"
+            android:text="  $ 0"
             android:textColor="#FFFFFF"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_column="0"
             app:layout_row="2" />
 
         <TextView
-            android:id="@+id/textView19"
-            android:layout_width="92dp"
-            android:layout_height="29dp"
+            android:id="@+id/textView29"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Visa"
-            android:textAlignment="viewEnd"
+            android:textAlignment="textEnd"
             android:textColor="#FFFFFF"
             app:layout_column="2"
             app:layout_row="2" />
     </androidx.gridlayout.widget.GridLayout>
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="270dp"
-        android:layout_height="52dp"
-        tools:layout_editor_absoluteX="84dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="94dp">
-=======
-        tools:layout_editor_absoluteY="94dp"
+        android:layout_width="344dp"
+        android:layout_height="62dp"
+        tools:layout_editor_absoluteX="53dp"
+        tools:layout_editor_absoluteY="78dp"
         tools:ignore="MissingConstraints">
->>>>>>> ca30383 (Разметка для карточки)
 
         <TextView
-            android:id="@+id/textView10"
-            android:layout_width="157dp"
+            android:id="@+id/textView22"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Your Name"
             android:textColor="#FFFFFF"
@@ -201,47 +172,44 @@
             app:layout_row="0" />
 
         <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView23"
+            android:layout_width="105dp"
             android:layout_height="wrap_content"
             android:text="A Debit Card"
+            android:textAlignment="viewEnd"
             android:textColor="#FFFFFF"
             app:layout_column="2"
             app:layout_row="0" />
 
         <TextView
-            android:id="@+id/textView14"
-            android:layout_width="158dp"
+            android:id="@+id/textView24"
+            android:layout_width="156dp"
             android:layout_height="wrap_content"
-            android:text="XXXX  XXXX XXXX XXXX"
+            android:text="XXXX XXXX XXXX XXXX"
             android:textColor="#FFFFFF"
             app:layout_column="0"
             app:layout_row="2" />
 
         <TextView
-            android:id="@+id/textView15"
-            android:layout_width="87dp"
+            android:id="@+id/textView25"
+            android:layout_width="107dp"
             android:layout_height="wrap_content"
-            android:text="  XX / XX"
+            android:text="XX /XX"
+            android:textAlignment="viewEnd"
             android:textColor="#FFFFFF"
             app:layout_column="2"
             app:layout_row="2" />
-
     </androidx.gridlayout.widget.GridLayout>
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add New Card"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="161dp"
-<<<<<<< HEAD
-        tools:layout_editor_absoluteY="16dp" />
-=======
         tools:layout_editor_absoluteY="16dp"
         tools:ignore="MissingConstraints" />
->>>>>>> ca30383 (Разметка для карточки)
 
 </androidx.constraintlayout.widget.ConstraintLayout>
